Fixed submit button position
Main:

Bug:
- Scrollbar in home.html
- inchangible port in localhost:port in upload
- Find name Blue but real name is Blue suit its not show

Fix:
- Fixed Submit button change position(must be under the <form>)

TODO:
- Insert data in MySQL directly
- detail page components
- Add login authentication
- Change to two server

--- a/sec1_gr1_fe_src/src/output.css
+++ b/sec1_gr1_fe_src/src/output.css
@@ -680,12 +680,12 @@ video {
   margin-top: 12rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -1044,10 +1044,6 @@ video {
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-t-2 {
-  border-top-width: 2px;
 }
 
 .border-black {
